# IFJprojekt2025

./: .gitignore  CMakeLists.txt  main.c
examples/: LLtable.txt
src/: ast_node.c  ast_node.h  codegen.c  codegen.h  cst_node.c  cst_node.h  error.h  lexer.c  lexer.h  list.c  list.h  parser.c  parser.h  string_builder.c  string_builder.h  token.h
